@@ -1,3 +1,7 @@
+2009-12-04 Axel Steiner <ast@treibsand.com>
+	* added new ldap backend
+	* reengineered settings behavior
+	
 2009-12-02 Axel Steiner <ast@treibsand.com>
 	* changed logging behavior, every log 
 	  message is now done with the TRACE macro.
